Bug 67111 - Genius MousePen i608X shows under different device ID
Summary: Genius MousePen i608X shows under different device ID
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_input-devices
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-16 13:15 UTC by krupicka.adam
Modified: 2015-01-10 15:00 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.10.18
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description krupicka.adam 2013-12-16 13:15:02 UTC
Hello, I own a Genius MousePen i608X graphic tablet. This device is assumed to show up under the ID of 0x5011 ( https://github.com/torvalds/linux/blob/v3.11/drivers/hid/hid-ids.h#L487 ), however the one I own shows up under 0x501a.
> lsusb
Bus 002 Device 004: ID 0458:501a KYE Systems Corp. (Mouse Systems)
[...]

This, of course, results in incorrect operation of the device. I am not the only one with this problem: https://www.kubuntuforums.net/showthread.php?62838-Genius-I608X-graphic-tablet-not-drawing
Comment 1 Alan 2013-12-18 14:23:26 UTC
Ok that sounds like it needs adding to one of the tables - the "fix" on the forum isn't the right way to do it but - it wants adding to the driver itself rather than mashing the include file up.

Do you know what the actual real tablet version is (does it claim to be  I608X on the box/tablet ?). Other than that it just needs you to be able to compile a kernel and test it and I can provide a test patch if Dmitry doesn't already have it in hand.

Alan
Comment 2 krupicka.adam 2013-12-19 00:05:52 UTC
Yes, it says "MousePen i608X" right on the back side of the tablet.

I have already tested it (I am "entity").
Comment 3 krupicka.adam 2014-02-01 17:12:27 UTC
Uh... okay, sorry, it would seem that there is a bit of a communication barrier for which I am sorry (not a native speaker here). I should be able to compile the kernel to test the patch, if you can provide it.
Comment 4 Storm 2014-09-16 23:00:49 UTC
WOW!!! Almost a year since it's reported and still not fixed!

Please, I just bought this tablet and it's completely unusable.


It is an original, authentic Genius MousePen i608x and it's ID is indeed 501a and NOT 5011

Also this bug should have a way higher importance because it technically renders the tablet unuasble completely for every user.
Comment 5 Alan 2014-09-16 23:25:55 UTC
This is a bug tracking system not a fixing service. It's just used so bugs remain visible.

If you want it fixed you should start with your distribution and/or support vendor if you have one
Comment 6 Storm 2014-09-17 04:28:58 UTC
Correct me if I'm wrong but isn't the point of tracking bugs is that they can get fixed?

And it's just a single character that's wrong, I'm sure it would be an easy fix. I understand that there are more important things* than this, but a year has passed already.

I'm not a company, I don't have anyone to solve my problems for me other than myself.


You said you know what is the proper way of fixing it. Right, then can you please help me making that happen? I own the tablet, I can check infos, test commands, whatever it needs to be done as long as someone guides me.


* I just spent my last coins on this tablet so that I can complete an artwork someone ordered from me and now I'm sitting here helpless, so forgive me if I seemed aggressive but this is a serious problem for me right now.
Comment 7 Storm 2014-09-17 08:03:00 UTC
Update:

I found some old forum posts with lsusb output where the tablet indeed shows as 5011. So it seems the ID was correct when it was included in the kernel, and Genius/KYE changed it afterwards in later versions.

Also, I'm right now compiling the kernel with the patch mentioned earlier because I need a temporary fix and also to confirm that this ID change solves the problems.
Comment 8 Storm 2014-09-17 19:40:22 UTC
Update: Compiled kernel with the ID changed and tablet works as expected.
Comment 9 Storm 2014-09-20 19:58:43 UTC
Someone with the privilege could please update the ticket? Changing status to confirmed, for example.

Note You need to log in before you can comment on or make changes to this bug.